APIs/googleapis.com/jobs/v4/java-client/docs/SearchJobsRequest.md


# SearchJobsRequest

The Request body of the `SearchJobs` call.

## Properties

| Name | Type | Description | Notes |
|------------ | ------------- | ------------- | -------------|
|**customRankingInfo** | [**CustomRankingInfo**](CustomRankingInfo.md) |  |  [optional] |
|**disableKeywordMatch** | **Boolean** | This field is deprecated. Please use SearchJobsRequest.keyword_match_mode going forward. To migrate, disable_keyword_match set to false maps to KeywordMatchMode.KEYWORD_MATCH_ALL, and disable_keyword_match set to true maps to KeywordMatchMode.KEYWORD_MATCH_DISABLED. If SearchJobsRequest.keyword_match_mode is set, this field is ignored. Controls whether to disable exact keyword match on Job.title, Job.description, Job.company_display_name, Job.addresses, Job.qualifications. When disable keyword match is turned off, a keyword match returns jobs that do not match given category filters when there are matching keywords. For example, for the query \&quot;program manager,\&quot; a result is returned even if the job posting has the title \&quot;software developer,\&quot; which doesn&#39;t fall into \&quot;program manager\&quot; ontology, but does have \&quot;program manager\&quot; appearing in its description. For queries like \&quot;cloud\&quot; that don&#39;t contain title or location specific ontology, jobs with \&quot;cloud\&quot; keyword matches are returned regardless of this flag&#39;s value. Use Company.keyword_searchable_job_custom_attributes if company-specific globally matched custom field/attribute string values are needed. Enabling keyword match improves recall of subsequent search requests. Defaults to false. |  [optional] |
|**diversificationLevel** | [**DiversificationLevelEnum**](#DiversificationLevelEnum) | Controls whether highly similar jobs are returned next to each other in the search results. Jobs are identified as highly similar based on their titles, job categories, and locations. Highly similar results are clustered so that only one representative job of the cluster is displayed to the job seeker higher up in the results, with the other jobs being displayed lower down in the results. Defaults to DiversificationLevel.SIMPLE if no value is specified. |  [optional] |
|**enableBroadening** | **Boolean** | Controls whether to broaden the search when it produces sparse results. Broadened queries append results to the end of the matching results list. Defaults to false. |  [optional] |
|**histogramQueries** | [**List&lt;HistogramQuery&gt;**](HistogramQuery.md) | An expression specifies a histogram request against matching jobs. Expression syntax is an aggregation function call with histogram facets and other options. Available aggregation function calls are: * &#x60;count(string_histogram_facet)&#x60;: Count the number of matching entities, for each distinct attribute value. * &#x60;count(numeric_histogram_facet, list of buckets)&#x60;: Count the number of matching entities within each bucket. A maximum of 200 histogram buckets are supported. Data types: * Histogram facet: facet names with format &#x60;a-zA-Z+&#x60;. * String: string like \&quot;any string with backslash escape for quote(\\\&quot;).\&quot; * Number: whole number and floating point number like 10, -1 and -0.01. * List: list of elements with comma(,) separator surrounded by square brackets, for example, [1, 2, 3] and [\&quot;one\&quot;, \&quot;two\&quot;, \&quot;three\&quot;]. Built-in constants: * MIN (minimum number similar to java Double.MIN_VALUE) * MAX (maximum number similar to java Double.MAX_VALUE) Built-in functions: * bucket(start, end[, label]): bucket built-in function creates a bucket with range of start, end). Note that the end is exclusive, for example, bucket(1, MAX, \&quot;positive number\&quot;) or bucket(1, 10). Job histogram facets: * company_display_name: histogram by [Job.company_display_name. * employment_type: histogram by Job.employment_types, for example, \&quot;FULL_TIME\&quot;, \&quot;PART_TIME\&quot;. * company_size (DEPRECATED): histogram by CompanySize, for example, \&quot;SMALL\&quot;, \&quot;MEDIUM\&quot;, \&quot;BIG\&quot;. * publish_time_in_day: histogram by the Job.posting_publish_time in days. Must specify list of numeric buckets in spec. * publish_time_in_month: histogram by the Job.posting_publish_time in months. Must specify list of numeric buckets in spec. * publish_time_in_year: histogram by the Job.posting_publish_time in years. Must specify list of numeric buckets in spec. * degree_types: histogram by the Job.degree_types, for example, \&quot;Bachelors\&quot;, \&quot;Masters\&quot;. * job_level: histogram by the Job.job_level, for example, \&quot;Entry Level\&quot;. * country: histogram by the country code of jobs, for example, \&quot;US\&quot;, \&quot;FR\&quot;. * admin1: histogram by the admin1 code of jobs, which is a global placeholder referring to the state, province, or the particular term a country uses to define the geographic structure below the country level, for example, \&quot;CA\&quot;, \&quot;IL\&quot;. * city: histogram by a combination of the \&quot;city name, admin1 code\&quot;. For example, \&quot;Mountain View, CA\&quot;, \&quot;New York, NY\&quot;. * admin1_country: histogram by a combination of the \&quot;admin1 code, country\&quot;, for example, \&quot;CA, US\&quot;, \&quot;IL, US\&quot;. * city_coordinate: histogram by the city center&#39;s GPS coordinates (latitude and longitude), for example, 37.4038522,-122.0987765. Since the coordinates of a city center can change, customers may need to refresh them periodically. * locale: histogram by the Job.language_code, for example, \&quot;en-US\&quot;, \&quot;fr-FR\&quot;. * language: histogram by the language subtag of the Job.language_code, for example, \&quot;en\&quot;, \&quot;fr\&quot;. * category: histogram by the JobCategory, for example, \&quot;COMPUTER_AND_IT\&quot;, \&quot;HEALTHCARE\&quot;. * base_compensation_unit: histogram by the CompensationInfo.CompensationUnit of base salary, for example, \&quot;WEEKLY\&quot;, \&quot;MONTHLY\&quot;. * base_compensation: histogram by the base salary. Must specify list of numeric buckets to group results by. * annualized_base_compensation: histogram by the base annualized salary. Must specify list of numeric buckets to group results by. * annualized_total_compensation: histogram by the total annualized salary. Must specify list of numeric buckets to group results by. * string_custom_attribute: histogram by string Job.custom_attributes. Values can be accessed via square bracket notations like string_custom_attribute[\&quot;key1\&quot;]. * numeric_custom_attribute: histogram by numeric Job.custom_attributes. Values can be accessed via square bracket notations like numeric_custom_attribute[\&quot;key1\&quot;]. Must specify list of numeric buckets to group results by. Example expressions: * &#x60;count(admin1)&#x60; * &#x60;count(base_compensation, [bucket(1000, 10000), bucket(10000, 100000), bucket(100000, MAX)])&#x60; * &#x60;count(string_custom_attribute[\&quot;some-string-custom-attribute\&quot;])&#x60; * &#x60;count(numeric_custom_attribute[\&quot;some-numeric-custom-attribute\&quot;], [bucket(MIN, 0, \&quot;negative\&quot;), bucket(0, MAX, \&quot;non-negative\&quot;)])&#x60; |  [optional] |
|**jobQuery** | [**JobQuery**](JobQuery.md) |  |  [optional] |
|**jobView** | [**JobViewEnum**](#JobViewEnum) | The desired job attributes returned for jobs in the search response. Defaults to JobView.JOB_VIEW_SMALL if no value is specified. |  [optional] |
|**keywordMatchMode** | [**KeywordMatchModeEnum**](#KeywordMatchModeEnum) | Controls what keyword match options to use. If both keyword_match_mode and disable_keyword_match are set, keyword_match_mode will take precedence. Defaults to KeywordMatchMode.KEYWORD_MATCH_ALL if no value is specified. |  [optional] |
|**maxPageSize** | **Integer** | A limit on the number of jobs returned in the search results. Increasing this value above the default value of 10 can increase search response time. The value can be between 1 and 100. |  [optional] |
|**offset** | **Integer** | An integer that specifies the current offset (that is, starting result location, amongst the jobs deemed by the API as relevant) in search results. This field is only considered if page_token is unset. The maximum allowed value is 5000. Otherwise an error is thrown. For example, 0 means to return results starting from the first matching job, and 10 means to return from the 11th job. This can be used for pagination, (for example, pageSize &#x3D; 10 and offset &#x3D; 10 means to return from the second page). |  [optional] |
|**orderBy** | **String** | The criteria determining how search results are sorted. Default is &#x60;\&quot;relevance desc\&quot;&#x60;. Supported options are: * &#x60;\&quot;relevance desc\&quot;&#x60;: By relevance descending, as determined by the API algorithms. Relevance thresholding of query results is only available with this ordering. * &#x60;\&quot;posting_publish_time desc\&quot;&#x60;: By Job.posting_publish_time descending. * &#x60;\&quot;posting_update_time desc\&quot;&#x60;: By Job.posting_update_time descending. * &#x60;\&quot;title\&quot;&#x60;: By Job.title ascending. * &#x60;\&quot;title desc\&quot;&#x60;: By Job.title descending. * &#x60;\&quot;annualized_base_compensation\&quot;&#x60;: By job&#39;s CompensationInfo.annualized_base_compensation_range ascending. Jobs whose annualized base compensation is unspecified are put at the end of search results. * &#x60;\&quot;annualized_base_compensation desc\&quot;&#x60;: By job&#39;s CompensationInfo.annualized_base_compensation_range descending. Jobs whose annualized base compensation is unspecified are put at the end of search results. * &#x60;\&quot;annualized_total_compensation\&quot;&#x60;: By job&#39;s CompensationInfo.annualized_total_compensation_range ascending. Jobs whose annualized base compensation is unspecified are put at the end of search results. * &#x60;\&quot;annualized_total_compensation desc\&quot;&#x60;: By job&#39;s CompensationInfo.annualized_total_compensation_range descending. Jobs whose annualized base compensation is unspecified are put at the end of search results. * &#x60;\&quot;custom_ranking desc\&quot;&#x60;: By the relevance score adjusted to the SearchJobsRequest.CustomRankingInfo.ranking_expression with weight factor assigned by SearchJobsRequest.CustomRankingInfo.importance_level in descending order. * Location sorting: Use the special syntax to order jobs by distance: &#x60;\&quot;distance_from(&#39;Hawaii&#39;)\&quot;&#x60;: Order by distance from Hawaii. &#x60;\&quot;distance_from(19.89, 155.5)\&quot;&#x60;: Order by distance from a coordinate. &#x60;\&quot;distance_from(&#39;Hawaii&#39;), distance_from(&#39;Puerto Rico&#39;)\&quot;&#x60;: Order by multiple locations. See details below. &#x60;\&quot;distance_from(&#39;Hawaii&#39;), distance_from(19.89, 155.5)\&quot;&#x60;: Order by multiple locations. See details below. The string can have a maximum of 256 characters. When multiple distance centers are provided, a job that is close to any of the distance centers would have a high rank. When a job has multiple locations, the job location closest to one of the distance centers will be used. Jobs that don&#39;t have locations will be ranked at the bottom. Distance is calculated with a precision of 11.3 meters (37.4 feet). Diversification strategy is still applied unless explicitly disabled in diversification_level. |  [optional] |
|**pageToken** | **String** | The token specifying the current offset within search results. See SearchJobsResponse.next_page_token for an explanation of how to obtain the next set of query results. |  [optional] |
|**requestMetadata** | [**RequestMetadata**](RequestMetadata.md) |  |  [optional] |
|**searchMode** | [**SearchModeEnum**](#SearchModeEnum) | Mode of a search. Defaults to SearchMode.JOB_SEARCH. |  [optional] |



## Enum: DiversificationLevelEnum

| Name | Value |
|---- | -----|
| DIVERSIFICATION_LEVEL_UNSPECIFIED | &quot;DIVERSIFICATION_LEVEL_UNSPECIFIED&quot; |
| DISABLED | &quot;DISABLED&quot; |
| SIMPLE | &quot;SIMPLE&quot; |
| ONE_PER_COMPANY | &quot;ONE_PER_COMPANY&quot; |
| TWO_PER_COMPANY | &quot;TWO_PER_COMPANY&quot; |
| MAX_THREE_PER_COMPANY | &quot;MAX_THREE_PER_COMPANY&quot; |
| DIVERSIFY_BY_LOOSER_SIMILARITY | &quot;DIVERSIFY_BY_LOOSER_SIMILARITY&quot; |



## Enum: JobViewEnum

| Name | Value |
|---- | -----|
| UNSPECIFIED | &quot;JOB_VIEW_UNSPECIFIED&quot; |
| ID_ONLY | &quot;JOB_VIEW_ID_ONLY&quot; |
| MINIMAL | &quot;JOB_VIEW_MINIMAL&quot; |
| SMALL | &quot;JOB_VIEW_SMALL&quot; |
| FULL | &quot;JOB_VIEW_FULL&quot; |



## Enum: KeywordMatchModeEnum

| Name | Value |
|---- | -----|
| MODE_UNSPECIFIED | &quot;KEYWORD_MATCH_MODE_UNSPECIFIED&quot; |
| DISABLED | &quot;KEYWORD_MATCH_DISABLED&quot; |
| ALL | &quot;KEYWORD_MATCH_ALL&quot; |
| TITLE_ONLY | &quot;KEYWORD_MATCH_TITLE_ONLY&quot; |



## Enum: SearchModeEnum

| Name | Value |
|---- | -----|
| SEARCH_MODE_UNSPECIFIED | &quot;SEARCH_MODE_UNSPECIFIED&quot; |
| JOB_SEARCH | &quot;JOB_SEARCH&quot; |
| FEATURED_JOB_SEARCH | &quot;FEATURED_JOB_SEARCH&quot; |



